--- a/Sheaft.Web.Manage/Views/Dashboard/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Dashboard/Index.cshtml
@@ -12,21 +12,21 @@
             <div class="card-body">
                 <h5 class="card-title">Consumers</h5>
                 <h6 class="card-subtitle mb-2 text-muted">@ViewBag.Consumers</h6>
-                <a asp-controller="users" asp-action="index" asp-route-kind="@ProfileKind.Consumer" class="card-link">Show</a>
+                <a asp-controller="consumers" asp-action="index" class="card-link">Show</a>
             </div>
         </div>
         <div class="card w-25 d-inline-block">
             <div class="card-body">
                 <h5 class="card-title">Stores</h5>
                 <h6 class="card-subtitle mb-2 text-muted">@ViewBag.Stores</h6>
-                <a asp-controller="companies" asp-action="index" asp-route-kind="@ProfileKind.Store" class="card-link">Show</a>
+                <a asp-controller="stores" asp-action="index" class="card-link">Show</a>
             </div>
         </div>
         <div class="card w-25 d-inline-block">
             <div class="card-body">
                 <h5 class="card-title">Producers</h5>
                 <h6 class="card-subtitle mb-2 text-muted">@ViewBag.Producers</h6>
-                <a asp-controller="companies" asp-action="index" asp-route-kind="@ProfileKind.Producer" class="card-link">Show</a>
+                <a asp-controller="producers" asp-action="index" class="card-link">Show</a>
             </div>
         </div>
         <div class="card w-25 d-inline-block">
@@ -105,7 +105,7 @@
             <div class="card-body">
                 <h5 class="card-title">Profile</h5>
                 <h6 class="card-subtitle mb-2 text-muted">1</h6>
-                <a asp-controller="users" asp-action="Edit" asp-route-id="@user.Id" class="card-link">Show</a>
+                <a asp-controller="consumers" asp-action="Edit" asp-route-id="@user.Id" class="card-link">Show</a>
             </div>
         </div>
 
