--- a/Sheaft.Web.Manage/Views/PurchaseOrders/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/PurchaseOrders/Index.cshtml
@@ -4,131 +4,156 @@
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
     string status = ((PurchaseOrderStatus?)ViewBag.Status)?.ToString("G");
+    Guid? imperonatingId = Context.Request.ImpersonificationId();
 }
 
-    <div class="container">
-        <h2 class="display-5">Purchase Orders</h2>
-        <br />
+<div class="container">
+    <h2 class="display-5">Purchase Orders</h2>
+    <br />
 
-        @if (ViewBag.Removed != null)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <span>Successfully removed purchase order @ViewBag.Removed</span>
+    @if (ViewBag.Removed != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <span>Successfully removed purchase order @ViewBag.Removed</span>
 
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <br />
-        }
-
-        @if (ViewBag.Restored != null)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <span>Successfully restored purchase order @ViewBag.Restored.Name</span>
-                <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@ViewBag.Restored.Id">View details</a>
-
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <br />
-        }
-
-        @if (ViewBag.Edited != null)
-        {
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <span>Successfully updated purchase order @ViewBag.Edited.Name</span>
-                <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@ViewBag.Edited.Id">View details</a>
-
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <br />
-        }
-
-        <div class="btn-group">
-            <label class="btn btn-secondary @(status == null ? "active": "")">
-                <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-status="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
-            </label>
-            @foreach (var existingStatus in Enum.GetNames(typeof(PurchaseOrderStatus)))
-            {
-                <label class="btn btn-secondary @(status == existingStatus ? "active": "")">
-                    <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-status="@existingStatus" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">@existingStatus</a>
-                </label>
-            }
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
         </div>
         <br />
+    }
 
-        <table class="table table-hover">
-            <thead class="thead-dark">
+    @if (ViewBag.Restored != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <span>Successfully restored purchase order @ViewBag.Restored.Name</span>
+            <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@ViewBag.Restored.Id">View details</a>
+
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <br />
+    }
+
+    @if (ViewBag.Edited != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            <span>Successfully updated purchase order @ViewBag.Edited.Name</span>
+            <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@ViewBag.Edited.Id">View details</a>
+
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <br />
+    }
+
+    <div class="btn-group">
+        <label class="btn btn-secondary @(status == null ? "active": "")">
+            <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-status="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
+        </label>
+        @foreach (var existingStatus in Enum.GetNames(typeof(PurchaseOrderStatus)))
+        {
+            <label class="btn btn-secondary @(status == existingStatus ? "active": "")">
+                <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-status="@existingStatus" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">@existingStatus</a>
+            </label>
+        }
+    </div>
+    <br />
+
+    <table class="table table-hover">
+        <thead class="thead-dark">
+            <tr>
+                <th scope="col">Reference</th>
+                <th scope="col">Status</th>
+                <th scope="col">TotalOnSalePrice</th>
+                <th scope="col">Lines</th>
+                <th scope="col">Products</th>
+                <th scope="col">CreatedOn</th>
+                <th scope="col">Sender</th>
+                <th scope="col">Producer</th>
+                <th scope="col"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var entity in Model)
+            {
                 <tr>
-                    <th scope="col">Reference</th>
-                    <th scope="col">Status</th>
-                    <th scope="col">TotalOnSalePrice</th>
-                    <th scope="col">Lines</th>
-                    <th scope="col">Products</th>
-                    <th scope="col">CreatedOn</th>
-                    <th scope="col">Removed</th>
-                    <th scope="col"></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var entity in Model)
-                {
-                    <tr>
-                        <th scope="row">@entity.Reference</th>
-                        <td>@entity.Status</td>
-                        <td>@(entity.TotalOnSalePrice)€</td>
-                        <td>@entity.LinesCount</td>
-                        <td>@entity.ProductsCount</td>
-                        <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
-                        <td>@entity.RemovedOn.HasValue</td>
-                        <td>
-                            <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@entity.Id" class="btn btn-info">
-                                <i class="fa fa-pen"></i>
-                            </a>
-
-                            @if (entity.RemovedOn.HasValue)
-                            {
-                                @using (Html.BeginForm("Restore", "PurchaseOrders", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                                {
-                                    <button type="submit" class="btn btn-success">
-                                        <i class="fa fa-trash-restore"></i>
-                                    </button>
-                                }
-                            }
-                            else
-                            {
-                                @using (Html.BeginForm("Delete", "PurchaseOrders", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                                {
-                                    <button type="submit" class="btn btn-danger">
-                                        <i class="fa fa-trash"></i>
-                                    </button>
-                                }
-                            }
-                        </td>
-                    </tr>
-                }
-            </tbody>
-            <tfoot>
-                <tr class="text-center">
-                    <td colspan="8">
-                        @if (currentPage >= 1)
+                    <th scope="row">@entity.Reference</th>
+                    <td>@entity.Status</td>
+                    <td>@(entity.TotalOnSalePrice)€</td>
+                    <td>@entity.LinesCount</td>
+                    <td>@entity.ProductsCount</td>
+                    <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
+                    <td>
+                        @entity.Sender.Name
+                        @if (!imperonatingId.HasValue)
                         {
-                            <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
-                                <i class="fa fa-caret-left"></i>
-                            </a>
+                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.Sender.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-info">
+                                    <i class="fa fa-user-secret"></i>
+                                </button>
+                            }
                         }
-                        @if (take == Model.Count())
+                    </td>
+                    <td>
+                        @entity.Vendor.Name
+                        @if (!imperonatingId.HasValue)
                         {
-                            <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
-                                <i class="fa fa-caret-right"></i>
-                            </a>
+                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.Vendor.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-info">
+                                    <i class="fa fa-user-secret"></i>
+                                </button>
+                            }
+                        }
+                    </td>
+                    <td>
+                        <a asp-controller="PurchaseOrders" asp-action="Details" asp-route-id="@entity.Id" class="btn btn-info">
+                            <i class="fa fa-pen"></i>
+                        </a>
+
+                        @if (entity.RemovedOn.HasValue)
+                        {
+                            @using (Html.BeginForm("Restore", "PurchaseOrders", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-success">
+                                    <i class="fa fa-trash-restore"></i>
+                                </button>
+                            }
+                        }
+                        else
+                        {
+                            @using (Html.BeginForm("Delete", "PurchaseOrders", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            {
+                                <button type="submit" class="btn btn-danger">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                            }
                         }
                     </td>
                 </tr>
-            </tfoot>
-        </table>
-    </div>
+            }
+        </tbody>
+        <tfoot>
+            <tr class="text-center">
+                <td colspan="8">
+                    @if (currentPage >= 1)
+                    {
+                        <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
+                            <i class="fa fa-caret-left"></i>
+                        </a>
+                    }
+                    @if (take == Model.Count())
+                    {
+                        <a asp-controller="PurchaseOrders" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
+                            <i class="fa fa-caret-right"></i>
+                        </a>
+                    }
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
