--- a/Sheaft.Web.Manage/Views/Returnables/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Returnables/Index.cshtml
@@ -1,19 +1,19 @@
-﻿@model IEnumerable<DeliveryModeViewModel>
+﻿@model IEnumerable<ReturnableViewModel>
 @{
-    ViewData["Title"] = "DeliveryModes";
+    ViewData["Title"] = "Returnables";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
     Guid? imperonatingId = Context.Request.ImpersonificationId();
 }
 
 <div class="container">
-    <h2 class="display-5">DeliveryModes</h2>
+    <h2 class="display-5">Returnables</h2>
     <br />
 
     @if (ViewBag.Removed != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully removed delivery mode @ViewBag.Removed</span>
+            <span>Successfully removed Returnable @ViewBag.Removed</span>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -25,8 +25,8 @@
     @if (ViewBag.Restored != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully restored deliveryMode @ViewBag.Restored.Name</span>
-            <a asp-controller="DeliveryModes" asp-action="Edit" asp-route-id="@ViewBag.Restored.Id">View details</a>
+            <span>Successfully restored Returnable @ViewBag.Restored.Name</span>
+            <a asp-controller="Returnables" asp-action="Edit" asp-route-id="@ViewBag.Restored.Id">View details</a>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -38,8 +38,8 @@
     @if (ViewBag.Edited != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully updated delivery mode @ViewBag.Edited.Name</span>
-            <a asp-controller="DeliveryModes" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+            <span>Successfully updated Returnable @ViewBag.Edited.Name</span>
+            <a asp-controller="Returnables" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -52,15 +52,15 @@
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Name</th>
-                <th scope="col">Kind</th>
+                <th scope="col">Price</th>
+                <th scope="col">Vat</th>
+                <th scope="col">CreatedOn</th>
                 @if (!imperonatingId.HasValue)
                 {
                     <th scope="col">Producer</th>
                 }
-                <th scope="col">Lock</th>
-                <th scope="col">CreatedOn</th>
                 <th scope="col">
-                    <a asp-controller="DeliveryModes" asp-action="Add" class="btn btn-success">
+                    <a asp-controller="Returnables" asp-action="Add" class="btn btn-success">
                         <i class="fa fa-plus"></i>
                     </a>
                 </th>
@@ -71,29 +71,27 @@
             {
                 <tr>
                     <th scope="row">@entity.Name</th>
-                    <td>@entity.Kind</td>
+                    <td>@entity.WholeSalePrice</td>
+                    <td>@(entity.Vat)%</td>
+                    <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
                     @if (!imperonatingId.HasValue)
                     {
-                        <td>
-                            @entity.Producer.Name
-                            @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.Producer.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
-                            {
-                                <button type="submit" class="btn btn-info">
-                                    <i class="fa fa-user-secret"></i>
-                                </button>
-                            }
-                        </td>
+                        <td>@entity.Producer.Name</td>
+                        @using (Html.BeginForm("ImpersonateById", "Account", new { id = entity.Producer.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                        {
+                            <button type="submit" class="btn btn-info">
+                                <i class="fa fa-user-secret"></i>
+                            </button>
+                        }
                     }
-                    <td>@(entity.LockOrderHoursBeforeDelivery)h</td>
-                    <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
                     <td>
-                        <a asp-controller="DeliveryModes" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                        <a asp-controller="Returnables" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
                             <i class="fa fa-pen"></i>
                         </a>
 
                         @if (entity.RemovedOn.HasValue)
                         {
-                            @using (Html.BeginForm("Restore", "DeliveryModes", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            @using (Html.BeginForm("Restore", "Returnables", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
                             {
                                 <button type="submit" class="btn btn-success">
                                     <i class="fa fa-trash-restore"></i>
@@ -102,7 +100,7 @@
                         }
                         else
                         {
-                            @using (Html.BeginForm("Delete", "DeliveryModes", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            @using (Html.BeginForm("Delete", "Returnables", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
                             {
                                 <button type="submit" class="btn btn-danger">
                                     <i class="fa fa-trash"></i>
@@ -118,13 +116,13 @@
                 <td colspan="6">
                     @if (currentPage >= 1)
                     {
-                        <a asp-controller="DeliveryModes" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
+                        <a asp-controller="Returnables" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
                             <i class="fa fa-caret-left"></i>
                         </a>
                     }
                     @if (take == Model.Count())
                     {
-                        <a asp-controller="DeliveryModes" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
+                        <a asp-controller="Returnables" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
                             <i class="fa fa-caret-right"></i>
                         </a>
                     }
