--- a/Sheaft.Web.Manage/Views/Stores/Index.cshtml
+++ b/Sheaft.Web.Manage/Views/Stores/Index.cshtml
@@ -1,19 +1,18 @@
-﻿@model IEnumerable<BusinessViewModel>
+﻿@model IEnumerable<StoreViewModel>
 @{
-    ViewData["Title"] = "Companies";
+    ViewData["Title"] = "Stores";
     int take = ViewBag.Take;
     int currentPage = ViewBag.Page;
-    ProfileKind? kind = ViewBag.Kind;
 }
 
 <div class="container">
-    <h2 class="display-5">Companies</h2>
+    <h2 class="display-5">Stores</h2>
     <br />
 
     @if (ViewBag.Removed != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully removed business @ViewBag.Removed</span>
+            <span>Successfully removed store @ViewBag.Removed</span>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -25,8 +24,8 @@
     @if (ViewBag.Restored != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully restored business @ViewBag.Restored</span>
-            <a asp-controller="Companies" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+            <span>Successfully restored store @ViewBag.Restored</span>
+            <a asp-controller="Stores" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -38,8 +37,8 @@
     @if (ViewBag.Edited != null)
     {
         <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <span>Successfully updated business @ViewBag.Edited.Name</span>
-            <a asp-controller="Companies" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
+            <span>Successfully updated store @ViewBag.Edited.Name</span>
+            <a asp-controller="Stores" asp-action="Edit" asp-route-id="@ViewBag.Edited.Id">View details</a>
 
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -48,26 +47,12 @@
         <br />
     }
 
-    <div class="btn-group">
-        <label class="btn btn-secondary @(kind == null ? "active": "")">
-            <a asp-controller="Companies" asp-action="Index" asp-route-kind="" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">All</a>
-        </label>
-        <label class="btn btn-secondary @(kind == ProfileKind.Producer ? "active": "")">
-            <a asp-controller="Companies" asp-action="Index" asp-route-kind="@ProfileKind.Producer" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Producers</a>
-        </label>
-        <label class="btn btn-secondary @(kind == ProfileKind.Store ? "active": "")">
-            <a asp-controller="Companies" asp-action="Index" asp-route-kind="@ProfileKind.Store" asp-route-take="@take" asp-route-page="@currentPage" class="text-white">Stores</a>
-        </label>
-    </div>
-    <br />
-
     <table class="table table-hover">
         <thead class="thead-dark">
             <tr>
                 <th scope="col">Name</th>
-                <th scope="col">Kind</th>
+                <th scope="col">Email</th>
                 <th scope="col">CreatedOn</th>
-                <th scope="col">Removed</th>
                 <th scope="col"></th>
             </tr>
         </thead>
@@ -76,16 +61,15 @@
             {
                 <tr>
                     <th scope="row">@entity.Name</th>
-                    <td>@entity.Kind</td>
+                    <td>@entity.Email</td>
                     <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
-                    <td>@entity.RemovedOn.HasValue</td>
                     <td>
-                        <a asp-controller="Companies" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
+                        <a asp-controller="Stores" asp-action="Edit" asp-route-id="@entity.Id" class="btn btn-info">
                             <i class="fa fa-pen"></i>
                         </a>
                         @if (!entity.RemovedOn.HasValue)
                         {
-                            @using (Html.BeginForm("Delete", "Companies", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
+                            @using (Html.BeginForm("Delete", "Stores", new { id = entity.Id }, FormMethod.Post, true, new { @class = "form d-inline" }))
                             {
                                 <button type="submit" class="btn btn-danger">
                                     <i class="fa fa-trash"></i>
@@ -101,13 +85,13 @@
                 <td colspan="5">
                     @if (currentPage >= 1)
                     {
-                        <a asp-controller="Companies" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
+                        <a asp-controller="Stores" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage-1)" class="btn btn-outline-secondary">
                             <i class="fa fa-caret-left"></i>
                         </a>
                     }
                     @if (take == Model.Count())
                     {
-                        <a asp-controller="Companies" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
+                        <a asp-controller="Stores" asp-action="Index" asp-route-take="@take" asp-route-page="@(currentPage+1)" class="btn btn-outline-secondary">
                             <i class="fa fa-caret-right"></i>
                         </a>
                     }
