--- a/Sheaft.Web.Manage/Views/Consumers/CreateLegal.cshtml
+++ b/Sheaft.Web.Manage/Views/Consumers/CreateLegal.cshtml
@@ -16,46 +16,53 @@
         @Html.HiddenFor(model => model.Owner.Id)
         <br />
 
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.FirstName)
-            @Html.TextBoxFor(m => m.Owner.FirstName, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.LastName)
-            @Html.TextBoxFor(m => m.Owner.LastName, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Email)
-            @Html.TextBoxFor(m => m.Owner.Email, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.BirthDate)
-            @Html.TextBoxFor(m => m.Owner.BirthDate, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Nationality)
-            @Html.DropDownListFor(m => m.Owner.Nationality, nationalities, new { @class = "form-control" })
-        </div>
-        <h4>Address</h4>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Line1)
-            @Html.TextBoxFor(m => m.Owner.Address.Line1, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Line2)
-            @Html.TextBoxFor(m => m.Owner.Address.Line2, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Zipcode)
-            @Html.TextBoxFor(m => m.Owner.Address.Zipcode, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.City)
-            @Html.TextBoxFor(m => m.Owner.Address.City, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.CountryOfResidence)
-            @Html.DropDownListFor(m => m.Owner.CountryOfResidence, countries, new { @class = "form-control" })
+        <div class="row">
+            <div class="col-md-6">
+                <h4>Information</h4>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.FirstName)
+                    @Html.TextBoxFor(m => m.Owner.FirstName, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.LastName)
+                    @Html.TextBoxFor(m => m.Owner.LastName, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Email)
+                    @Html.TextBoxFor(m => m.Owner.Email, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.BirthDate)
+                    @Html.TextBoxFor(m => m.Owner.BirthDate, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Nationality)
+                    @Html.DropDownListFor(m => m.Owner.Nationality, nationalities, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Address</h4>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Line1)
+                    @Html.TextBoxFor(m => m.Owner.Address.Line1, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Line2)
+                    @Html.TextBoxFor(m => m.Owner.Address.Line2, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Zipcode)
+                    @Html.TextBoxFor(m => m.Owner.Address.Zipcode, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.City)
+                    @Html.TextBoxFor(m => m.Owner.Address.City, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.CountryOfResidence)
+                    @Html.DropDownListFor(m => m.Owner.CountryOfResidence, countries, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
 
         <br />
