--- a/Sheaft.Web.Manage/Views/Producers/CreateLegal.cshtml
+++ b/Sheaft.Web.Manage/Views/Producers/CreateLegal.cshtml
@@ -20,90 +20,103 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Owner.Id)
         <br />
-        <h3>Company</h3>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Email)
-            @Html.TextBoxFor(m => m.Email, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Kind)
-            @Html.DropDownListFor(m => m.Kind, kinds, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Siret)
-            @Html.TextBoxFor(m => m.Siret, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.VatIdentifier)
-            @Html.TextBoxFor(m => m.VatIdentifier, null, new { @class = "form-control" })
-        </div>
-        <h4>Address</h4>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Address.Line1)
-            @Html.TextBoxFor(m => m.Address.Line1, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Address.Line2)
-            @Html.TextBoxFor(m => m.Address.Line2, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Address.Zipcode)
-            @Html.TextBoxFor(m => m.Address.Zipcode, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Address.City)
-            @Html.TextBoxFor(m => m.Address.City, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Address.Country)
-            @Html.DropDownListFor(m => m.Address.Country, countries, new { @class = "form-control" })
+
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Company</h3>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Email)
+                    @Html.TextBoxFor(m => m.Email, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Kind)
+                    @Html.DropDownListFor(m => m.Kind, kinds, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Siret)
+                    @Html.TextBoxFor(m => m.Siret, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.VatIdentifier)
+                    @Html.TextBoxFor(m => m.VatIdentifier, null, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Address</h4>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address.Line1)
+                    @Html.TextBoxFor(m => m.Address.Line1, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address.Line2)
+                    @Html.TextBoxFor(m => m.Address.Line2, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address.Zipcode)
+                    @Html.TextBoxFor(m => m.Address.Zipcode, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address.City)
+                    @Html.TextBoxFor(m => m.Address.City, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Address.Country)
+                    @Html.DropDownListFor(m => m.Address.Country, countries, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
 
-        <h3>Owner</h3>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.FirstName)
-            @Html.TextBoxFor(m => m.Owner.FirstName, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.LastName)
-            @Html.TextBoxFor(m => m.Owner.LastName, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Email)
-            @Html.TextBoxFor(m => m.Owner.Email, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.BirthDate)
-            @Html.TextBoxFor(m => m.Owner.BirthDate, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Nationality)
-            @Html.DropDownListFor(m => m.Owner.Nationality, nationalities, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.CountryOfResidence)
-            @Html.DropDownListFor(m => m.Owner.CountryOfResidence, countries, new { @class = "form-control" })
-        </div>
-        <h4>Address</h4>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Line1)
-            @Html.TextBoxFor(m => m.Owner.Address.Line1, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Line2)
-            @Html.TextBoxFor(m => m.Owner.Address.Line2, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Zipcode)
-            @Html.TextBoxFor(m => m.Owner.Address.Zipcode, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.City)
-            @Html.TextBoxFor(m => m.Owner.Address.City, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.Owner.Address.Country)
-            @Html.DropDownListFor(m => m.Owner.Address.Country, countries, new { @class = "form-control" })
+        <div class="row">
+            <div class="col-md-6">
+                <h3>Owner</h3>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.FirstName)
+                    @Html.TextBoxFor(m => m.Owner.FirstName, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.LastName)
+                    @Html.TextBoxFor(m => m.Owner.LastName, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Email)
+                    @Html.TextBoxFor(m => m.Owner.Email, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.BirthDate)
+                    @Html.TextBoxFor(m => m.Owner.BirthDate, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Nationality)
+                    @Html.DropDownListFor(m => m.Owner.Nationality, nationalities, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.CountryOfResidence)
+                    @Html.DropDownListFor(m => m.Owner.CountryOfResidence, countries, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h4>Address</h4>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Line1)
+                    @Html.TextBoxFor(m => m.Owner.Address.Line1, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Line2)
+                    @Html.TextBoxFor(m => m.Owner.Address.Line2, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Zipcode)
+                    @Html.TextBoxFor(m => m.Owner.Address.Zipcode, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.City)
+                    @Html.TextBoxFor(m => m.Owner.Address.City, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.Owner.Address.Country)
+                    @Html.DropDownListFor(m => m.Owner.Address.Country, countries, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
 
         <br />
