--- a/Sheaft.Web.Manage/Views/Stores/Edit.cshtml
+++ b/Sheaft.Web.Manage/Views/Stores/Edit.cshtml
@@ -17,80 +17,85 @@
         @Html.HiddenFor(model => model.Kind)
         <br />
 
-        <div class="form-group">
-            @Html.LabelFor(c => c.Name, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Name, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Email, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Email, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Phone, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Phone, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Tags, new { @class = "form-label" })
-            @Html.ListBoxFor(c => c.Tags, availableTags, new { @class = "form-control", @style = "height:12rem;" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
-            @if (!string.IsNullOrWhiteSpace(Model.Picture))
-            {
-                <img src="@Model.Picture" height="100" />
-            }
-            @Html.TextBoxFor(c => c.Picture, new { @class = "form-control", @type = "file" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Description, new { @class = "form-label" })
-            @Html.TextAreaFor(c => c.Description, new { @class = "form-control" })
-        </div>
-        <div class="form-check">
-            @Html.CheckBoxFor(m => m.OpenForNewBusiness, new { @class = "form-check-input" })
-            @Html.LabelFor(m => m.OpenForNewBusiness, new { @class = "form-check-label" })
-        </div>
-        <br />
-        <h4>Address</h4>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Address.Line1, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Address.Line1, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Address.Line2, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Address.Line2, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Address.Zipcode, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Address.Zipcode, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Address.City, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Address.City, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Address.Latitude, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Address.Latitude, null, new { @class = "form-control" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(c => c.Address.Longitude, new { @class = "form-label" })
-            @Html.TextBoxFor(c => c.Address.Longitude, null, new { @class = "form-control" })
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(m => m.CreatedOn)
-            @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        <div class="form-group">
-            @Html.LabelFor(m => m.UpdatedOn)
-            @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-        </div>
-        @if (Model.RemovedOn.HasValue)
-        {
-            <div class="form-group">
-                @Html.LabelFor(m => m.RemovedOn)
-                @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+        <div class="row">
+            <div class="col-md-6">
+                <h4>Information</h4>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Name, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Name, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.CreatedOn)
+                    @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(m => m.UpdatedOn)
+                    @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+                </div>
+                @if (Model.RemovedOn.HasValue)
+                {
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.RemovedOn)
+                        @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+                    </div>
+                }
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Email, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Email, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Phone, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Phone, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Tags, new { @class = "form-label" })
+                    @Html.ListBoxFor(c => c.Tags, availableTags, new { @class = "form-control", @style = "height:12rem;" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Picture, new { @class = "form-label" })
+                    @if (!string.IsNullOrWhiteSpace(Model.Picture))
+                    {
+                        <img src="@Model.Picture" height="40" />
+                    }
+                    @Html.TextBoxFor(c => c.Picture, new { @class = "form-control", @type = "file" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Description, new { @class = "form-label" })
+                    @Html.TextAreaFor(c => c.Description, new { @class = "form-control" })
+                </div>
+                <div class="form-check">
+                    @Html.CheckBoxFor(m => m.OpenForNewBusiness, new { @class = "form-check-input" })
+                    @Html.LabelFor(m => m.OpenForNewBusiness, new { @class = "form-check-label" })
+                </div>
             </div>
-        }
+            <div class="col-md-6">
+                <h4>Address</h4>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Address.Line1, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Address.Line1, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Address.Line2, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Address.Line2, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Address.Zipcode, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Address.Zipcode, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Address.City, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Address.City, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Address.Latitude, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Address.Latitude, null, new { @class = "form-control" })
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(c => c.Address.Longitude, new { @class = "form-label" })
+                    @Html.TextBoxFor(c => c.Address.Longitude, null, new { @class = "form-control" })
+                </div>
+            </div>
+        </div>
 
         <br />
         <a asp-controller="Stores" asp-action="Index" class="btn btn-light">
